# MDSAPT

./: .envrc  .gitattributes  .gitignore  .lgtm.yml  .pylintrc  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  MDSPAT_working2.yml  README.md  _version.py  build.sh  environment.yml  flake.nix  mdsapt_env.yaml  meta.yaml  optimizer_method_test.ipynb  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  versioneer.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml  draft-pdf.yml
JOSS/: paper.bib  paper.jats  paper.md
JOSS/figures/: inputs.xcf
MDSAPT/: _version.py
MDSAPT/tests/: test_MDSAPT.py
devtools/: README.md
devtools/conda-envs/: test_env.yaml
devtools/deploy/: environment.yml
docs/: Makefile  README.md  api.rst  conf.py  config.rst  getting_started.rst  index.rst  install.rst  make.bat  optimizer.rst  quick.rst  reader.rst  repair.rst  requirements.yaml  sapt.rst  scripts.rst  viewer.rst
mdsapt/: __init__.py  __main__.py  _version.py  cli.py  config.py  log.py  optimizer.py  reader.py  repair.py  sapt.py  viewer.py
mdsapt/data/: docking_template.yaml  template_input.yaml  trajectory_template.yaml
mdsapt/tests/: __init__.py  test_MDSAPT.py  test_config.py  test_ensemble.py  test_formal_charge.py  test_optimizer.py  test_reader.py  test_repair.py  test_sapt.py
mdsapt/tests/testing_resources/: docking_in.yaml  test.in  test_broken_input.yaml  test_input.yaml  test_read_error.dcd
mdsapt/utils/: ensemble.py  formal_charge.py  utils.py
scripts/: mdsapt_get_runinput.py  mdsapt_run_sapt.py
