[tool.poetry]
name = "mdsapt"
version = "2.0.6-rc1"
description = "SAPT energy calculator built using MDAnalysis and Psi4"
authors = [
    "Alia Lescoulie <alia.lescoulie@gmail.com>",
    "Astrid Yu <astrid@astrid.tech",
    "Ashley Ringer McDonald <armcdona@calpoly.edu"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
#numpy = "1.26.1"
mdanalysis = "^2.9"
click = "^8.1.7"
rdkit = "^2025.03.1"
pandas = "^2.2.3"
pydantic = "^2.11.3"

[tool.poetry.group.doc.dependencies]
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.group.test.dependencies]
autopep8 = "^2.2.0"
pylint = "^3.2.3"
pyright = "^1.1.367"
pytest = "^7"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mdsapt = "mdsapt:cli"
